--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session Notice</title>
+    <title>NOTICE</title>
 
     <style>
         .center {
@@ -37,23 +37,17 @@
         .content p {
             text-align: justify;
             padding: 10px;
-        }
-        .team {
-
-        }
-
-
     </style>
 </head>
 <body>
     <div class="center">
-        <p class="date">24 July 2023</p>
+        <p class="date">22 July 2023</p>
         <h3 class="heading">Notice</h3>
         <hr>
 
         <div class="content">
             <p class="company"><strong>Code 2 Crown</strong></p>
-            <p class="company">Date : July 24, 2023</p>
+            <p class="company">Date : July 22, 2023</p>
             <p class="company"><strong>Notice : </strong>Training Session on Aug 1, 2023</p><br>
             
             <p>Dear Team, <br><br>We hope this message finds you all in good health and high spirits. We are pleased to inform you that a training session has been scheduled for our team on Aug 1, 2023.</p>
@@ -63,15 +57,13 @@
         <p>Details of the Training Session : <br><br>Date : 1 Aug 2023 <br> Time : 9:00 AM - till topic end
         </p>
 
-        <p>If you have any questions or require further information, please do not hesitate to reach out to Areeba Ansari at Whatsapp : 8266949364 or help.code2crown@gmail.com</p>
+        <p>If you have any questions or require further information, please do not hesitate to reach out to Areeba Ansari at Whatsapp: 8266949364 or help.code2crown@gmail.com</p>
 
         <p>Let us come together as a team to make the most of this training session and continue striving for excellence in our work.</p>
 
-        <p>We will complete web development training according to <a href="./syllabus.html">SYLLABUS</a> and time as given. Here not to focus on time we will focus on only topic complete.</p>
+        <p>We will complete web development training according to <a href="./syllabus.html">SYLLABUS</a> and time as given. Here not focus on the time we will focus on only the topic complete.</p>
             <p><strong>All the best my team.</strong></p>
         </div>
-        
-
     </div>
 </body>
 </html>
