--- a/syllabus.html
+++ b/syllabus.html
@@ -38,6 +38,9 @@
         th {
             background-color: #f2f2f2;
         }
+
+        li {
+            font-size: small;
     </style>
 </head>
 
