--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <p>Let us come together as a team to make the most of this training session and continue striving for excellence in our work.</p>
 
         <p>We will complete web development training according to <a href="./syllabus.html">SYLLABUS</a> and time as given. Here not focus on the time we will focus on only the topic complete.</p>
+            <a href="./syllabus.html"> Click me to get syllabus</a>
             <p><strong>All the best my team.</strong></p>
         </div>
     </div>
