--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -42,6 +42,12 @@
         li {
             font-size: small;
         }
+
+        span {
+            color: green;
+            font-weight: bold;
+            align-content: center;
+        }
     </style>
 </head>
 
@@ -69,7 +75,8 @@
                     </ul>
                 </td>
                 <td>Day 1</td>
-                <td><a href="https://meet.google.com/qfk-sgaz-tyw">Join</a></td>
+                <td><a href="https://meet.google.com/qfk-sgaz-tyw">Join</a>
+                <br><span>Completed</span></td>
             </tr>
 
             <tr>
@@ -83,7 +90,7 @@
                 </td>
                 <td>Day 1</td>
 
-            </tr <tr>
+            </tr> <tr>
             <td>
                 SECTION 3 : Intermediate to HTML <ul>
                     <li>The list element</li>
@@ -94,7 +101,7 @@
                 </ul>
             <td>Day 2</td>
             <td><a href="https://meet.google.com/jby-mgag-cdo
-                    ">Join</a></td>
+                    ">Join</a><br><span>Completed</span></td>
             </td>
             </tr>
 
@@ -142,7 +149,7 @@
                         <li>[ Project ] Colour Vocab Website
                         </li>
                 <td>Day 3</td>
-                <td><a href="https://meet.google.com/xym-djac-bvb">Join</a></td>
+                <td><a href="https://meet.google.com/xym-djac-bvb">Join</a><br><span>Completed</span></td>
                 </ul>
                 </td>
             </tr>
@@ -161,7 +168,7 @@
                         </li>
                     </ul>
                 <td>Day 4</td>
-                <td><a href="https://meet.google.com/sqz-ntgi-ubv">Join</a></td>
+                <td><a href="https://meet.google.com/sqz-ntgi-ubv">Join</a><br><span>Completed</span></td>
                 </td>
             </tr>
 
@@ -175,7 +182,7 @@
                         </li>
                     </ul>
                 <td>Day 5</td>
-                <td><a href="https://meet.google.com/byz-qghi-ztn">Join</a></td>
+                <td><a href="https://meet.google.com/byz-qghi-ztn">Join</a><br><span>Completed</span></td>
                 </td>
             </tr>
 
@@ -194,7 +201,9 @@
                         </li>
                     </ul>
                 <td>Day 6</td>
-                <td><a href="https://meet.google.com/owq-mpwf-bgf">Join</a></td>
+                <td><a href="https://meet.google.com/owq-mpwf-bgf">Join</a>
+<!--                     <br><span>Completed</span> -->
+                </td>
                 </td>
             </tr>
             <tr>
@@ -214,7 +223,9 @@
                         </li>
                     </ul>
                 <td>Day 7</td>
-                <td><a href="https://meet.google.com/hep-iqvh-gwv">Join</a></td>
+                <td><a href="https://meet.google.com/hep-iqvh-gwv">Join</a>
+<!--                     <br><span>Completed</span> -->
+                </td>
                 </td>
             </tr>
             <tr>
@@ -231,7 +242,9 @@
                     </ul>
                 </td>
                 <td>Day 8</td>
-                <td><a href="https://meet.google.com/ipm-jodh-nee">Join</a></td>
+                <td><a href="https://meet.google.com/ipm-jodh-nee">Join</a>
+<!--                     <br><span>Completed</span> -->
+                </td>
             </tr>
         </table>
 
@@ -257,7 +270,9 @@
                     </ul>
                 </td>
                 <td>Day 9</td>
-                <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a></td>
+                <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
+<!--                     <br><span>Completed</span> -->
+                </td>
             </tr>
         </table>
 
@@ -285,7 +300,9 @@
                     </ul>
                 </td>
                 <td>Day 10</td>
-                <td><a href="https://meet.google.com/bvu-rvku-ccf">Join</a></td>
+                <td><a href="https://meet.google.com/bvu-rvku-ccf">Join</a>
+<!--                     <br><span>Completed</span> -->
+                </td>
             </tr>
         </table>
     </div>
