--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -202,7 +202,7 @@
                     </ul>
                 <td>Day 6</td>
                 <td><a href="https://meet.google.com/owq-mpwf-bgf">Join</a>
-<!--                     <br><span>Completed</span> -->
+                    <br><span>Completed</span>
                 </td>
                 </td>
             </tr>
