--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -224,7 +224,7 @@
                     </ul>
                 <td>Day 7</td>
                 <td><a href="https://meet.google.com/hep-iqvh-gwv">Join</a>
-<!--                     <br><span>Completed</span> -->
+                    <br><span>Completed</span>
                 </td>
                 </td>
             </tr>
