--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -64,6 +64,7 @@
                 <th>TOPIC</th>
                 <th>TIME</th>
                 <th>LINK</th>
+                <th>RECORDED SESSION LINK</th>
             </tr>
             <tr>
                 <td>SECTION 1 : Front-End Web Development <ul>
@@ -89,6 +90,7 @@
                     </ul>
                 </td>
                 <td>Day 1</td>
+                <td>-</td>
 
             </tr> <tr>
             <td>
@@ -103,6 +105,7 @@
             <td><a href="https://meet.google.com/jby-mgag-cdo
                     ">Join</a><br><span>Completed</span></td>
             </td>
+            <td>-</td>
             </tr>
 
             <tr>
