--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -75,7 +75,7 @@
                         <li>How to get help when you're stuck</li>
                     </ul>
                 </td>
-                <td>Day 1</td>
+<!--                 <td>Day 1</td> -->
                 <td><a href="https://meet.google.com/qfk-sgaz-tyw">Join</a>
                 <br><span>Completed</span></td>
             </tr>
