--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -48,6 +48,10 @@
             font-weight: bold;
             align-content: center;
         }
+
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -64,7 +68,7 @@
                 <th>TOPIC</th>
                 <th>TIME</th>
                 <th>LINK</th>
-                <th>RECORDED SESSION LINK</th>
+                <th>RECORDED LINK</th>
             </tr>
             <tr>
                 <td>SECTION 1 : Front-End Web Development <ul>
@@ -75,7 +79,7 @@
                         <li>How to get help when you're stuck</li>
                     </ul>
                 </td>
-<!--                 <td>Day 1</td> -->
+                <td>Day 1</td>
                 <td><a href="https://meet.google.com/qfk-sgaz-tyw">Join</a>
                 <br><span>Completed</span></td>
             </tr>
@@ -90,7 +94,7 @@
                     </ul>
                 </td>
                 <td>Day 1</td>
-                <td>-</td>
+                <td></td>
 
             </tr> <tr>
             <td>
@@ -127,6 +131,7 @@
                         </li>
                     </ul>
                 <td>Day 2</td>
+                <td></td>
                 </td>
             </tr>
         </table>
@@ -138,6 +143,7 @@
                 <th>TOPIC</th>
                 <th>TIME</th>
                 <th>LINK</th>
+                <th>RECORDED LINK</th>
             </tr>
             <tr>
                 <td>SECTION 5 : Introduction to CSS <ul>
@@ -154,7 +160,7 @@
                 <td>Day 3</td>
                 <td><a href="https://meet.google.com/xym-djac-bvb">Join</a><br><span>Completed</span></td>
                 </ul>
-                </td>
+                <td></td>
             </tr>
             <tr>
                 <td>
@@ -173,6 +179,7 @@
                 <td>Day 4</td>
                 <td><a href="https://meet.google.com/sqz-ntgi-ubv">Join</a><br><span>Completed</span></td>
                 </td>
+                <td></td>
             </tr>
 
             <tr>
@@ -187,6 +194,7 @@
                 <td>Day 5</td>
                 <td><a href="https://meet.google.com/byz-qghi-ztn">Join</a><br><span>Completed</span></td>
                 </td>
+            <td></td>
             </tr>
 
             <tr>
@@ -207,7 +215,7 @@
                 <td><a href="https://meet.google.com/owq-mpwf-bgf">Join</a>
                     <br><span>Completed</span>
                 </td>
-                </td>
+                <td></td>
             </tr>
             <tr>
                 <td>SECTION 9 : Flexbox
@@ -229,7 +237,7 @@
                 <td><a href="https://meet.google.com/hep-iqvh-gwv">Join</a>
                     <br><span>Completed</span>
                 </td>
-                </td>
+                <td></td>
             </tr>
             <tr>
                 <td>SECTION 10 : Grid
@@ -246,8 +254,9 @@
                 </td>
                 <td>Day 8</td>
                 <td><a href="https://meet.google.com/ipm-jodh-nee">Join</a>
-<!--                     <br><span>Completed</span> -->
+                    <br><span>Completed</span>
                 </td>
+                <td><a href="https://youtu.be/M9Mp4_uKNDQ">Watch</td>
             </tr>
         </table>
 
@@ -258,6 +267,7 @@
                 <th>TOPIC</th>
                 <th>TIME</th>
                 <td>LINK</td>
+                <td>RECORDED LINK</td>
             </tr>
             <tr>
                 <td>SECTION 11 : Bootstrap
@@ -276,6 +286,7 @@
                 <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
 <!--                     <br><span>Completed</span> -->
                 </td>
+                <td></td>
             </tr>
         </table>
 
@@ -286,6 +297,7 @@
                 <th>TOPIC</th>
                 <th>TIME</th>
                 <th>LINK</th>
+                <td>RECORDED LINK</td>
             </tr>
             <tr>
                 <td>SECTION 12 : Design School
@@ -306,6 +318,7 @@
                 <td><a href="https://meet.google.com/bvu-rvku-ccf">Join</a>
 <!--                     <br><span>Completed</span> -->
                 </td>
+                <td></td>
             </tr>
         </table>
     </div>
