--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -278,13 +278,15 @@
                         </li>
                         <li>Bootstrap Components
                         </li>
-                        <li>[ Project ] TinDog Startuo Website
+                        <li>[ Project ] TinDog Startup Website
                         </li>
                     </ul>
                 </td>
                 <td>Day 9</td>
                 <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
-<!--                     <br><span>Completed</span> -->
+                    <br><span>Completed</span>
+                    <p>Join with Day 10</p>
+                     <td><a href="https://youtu.be/Y3N7_I0RKOk">Watch</td>
                 </td>
                 <td></td>
             </tr>
