--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -285,8 +285,8 @@
                 <td>Day 9</td>
                 <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
                     <br><span>Completed</span>
-                    <p>Join with Day 10</p>
-                     <td><a href="https://youtu.be/Y3N7_I0RKOk">Watch</td>
+                    <span>Join with Day 10</span>
+                     <td><a href="https://youtu.be/Y3N7_I0RKOk">Watch Part - 1</td>
                 </td>
                 <td></td>
             </tr>
