--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -285,7 +285,8 @@
                 <td>Day 9</td>
                 <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
                     <br><span>Completed</span>
-                    <span>Join with Day 10</span>
+                    <br>
+                    <span style= "color: red;">Join with Day 10</span>
                      <td><a href="https://youtu.be/Y3N7_I0RKOk">Watch Part - 1</td>
                 </td>
                 <td></td>
