--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -286,7 +286,7 @@
                 <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
                     <br><span>Completed</span>
                     <br>
-                    <span style= "color: red;">Join with Day 10</span>
+<!--                     <span style= "color: red;">Join with Day 10</span> -->
                      <td><a href="https://youtu.be/Y3N7_I0RKOk">Watch Part - 1</td>
                 </td>
                 <td></td>
