--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -284,7 +284,7 @@
                 </td>
                 <td>Day 9</td>
                 <td><a href="https://meet.google.com/npb-ahea-hkg">Join</a>
-                    <br><span>Completed</span>
+<!--                     <br><span>Completed</span> -->
                     <br>
 <!--                     <span style= "color: red;">Join with Day 10</span> -->
                      <td><a href="https://youtu.be/Y3N7_I0RKOk">Watch Part - 1</td>
