--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -321,7 +321,7 @@
                 <td><a href="https://meet.google.com/bvu-rvku-ccf">Join</a>
                 <br>
                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span> 
-                    <span>Completed</span> -->
+<!--                  <span>Completed</span> -->
                 </td>
                 <td></td>
             </tr>
