--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -320,7 +320,33 @@
                 <td>Day 10</td>
                 <td><a href="https://meet.google.com/bvu-rvku-ccf">Join</a>
                 <br>
-                     <span style= "color: red;">Today's session off,<br> Due to health issue.</span> 
+<!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
+<!--                  <span>Completed</span> -->
+                </td>
+                <td></td>
+            </tr>
+        </table>
+
+        <h3>PROJECT</h3>
+
+        
+        <table>
+            <tr>
+                <th>TOPIC</th>
+                <th>TIME</th>
+                <th>DOWNLAOD</th>
+            </tr>
+            <tr>
+                <td>SECTION 13 : Capstone Project 2 - Personal Website
+                    <ul>
+                        <li>Instructions
+                        </li>
+                    </ul>
+                </td>
+                <td>5 Hours</td>
+                <td><a href="./Capstone Project - 2.pdf" download="Capstone Project - 2">Downlaod</a>
+                <br>
+<!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
 <!--                  <span>Completed</span> -->
                 </td>
                 <td></td>
