--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -321,8 +321,9 @@
                 <td><a href="https://meet.google.com/bvu-rvku-ccf">Join</a>
                 <br>
 <!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
-<!--                  <span>Completed</span> -->
+                 <span>Completed</span>
                 </td>
+                 <td><a href="https://youtu.be/9swzL5dk5jU">Watch</td>
                 <td></td>
             </tr>
         </table>
