--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -348,7 +348,7 @@
                 <td><a href="./Capstone Project - 2.pdf" download="Capstone Project - 2">Downlaod</a>
                 <br>
 <!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
-<!--                  <span>Completed</span> -->
+                 <span>Completed</span>
                 </td>
                 <td></td>
             </tr>
