--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -345,10 +345,28 @@
                     </ul>
                 </td>
                 <td>5 Hours</td>
+                <span>Completed</span>
                 <td><a href="./Capstone Project - 2.pdf" download="Capstone Project - 2">Downlaod</a>
                 <br>
 <!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
-                 <span>Completed</span>
+                 
+                </td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td>SECTION 13.1 : Amazon Clone Project
+                    <ul>
+                        <li>Amazon website
+                        </li>
+                    </ul>
+                </td>
+                <td>-</td>
+<!--                 <span>Completed</span> -->
+                <td><a href="https://youtu.be/zW_3BFCUcPs">Watch Part - 1</a>
+                <br>
+<!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
+                 
                 </td>
                 <td></td>
             </tr>
