--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -328,9 +328,7 @@
             </tr>
         </table>
 
-        <h3>PROJECT</h3>
-
-        
+        <h3>PROJECT</h3>        
         <table>
             <tr>
                 <th>TOPIC</th>
@@ -344,8 +342,8 @@
                         </li>
                     </ul>
                 </td>
-                <td>5 Hours</td>
-                <span>Completed</span>
+                <td>5 Hours
+                <span>Completed</span></td>
                 <td><a href="./Capstone Project - 2.pdf" download="Capstone Project - 2">Downlaod</a>
                 <br>
 <!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
