--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -363,6 +363,7 @@
 <!--                 <span>Completed</span> -->
                 <td><a href="https://youtu.be/zW_3BFCUcPs">Watch Part - 1</a>
                 <br>
+                    <a href="https://youtu.be/dIsmOdYHX-s">Watch Part - 2</a>
 <!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
                  
                 </td>
