--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -369,6 +369,22 @@
                 </td>
                 <td></td>
             </tr>
+
+            <tr>
+                <td>SECTION 13.2 : Portfolio Website Project
+                    <ul>
+                        <li>Personal Portfolio website
+                        </li>
+                    </ul>
+                </td>
+                <td>-</td>
+                <td><a href="https://youtu.be/Za0gcq3pwYM">Watch Part - 1</a>
+                <br>
+<!--                     <a href="https://youtu.be/dIsmOdYHX-s">Watch Part - 2</a> -->
+                 
+                </td>
+                <td></td>
+            </tr>
         </table>
     </div>
 </body>
