--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -385,6 +385,22 @@
                 </td>
                 <td></td>
             </tr>
+
+             <tr>
+                <td>SECTION 13.3 : Client Website Project
+                    <ul>
+                        <li>AVIRUP TOTO SERVICE
+                        </li>
+                    </ul>
+                </td>
+                <td>-</td>
+<!--                 <td><a href="https://youtu.be/Za0gcq3pwYM">Watch Part - 1</a> -->
+                <br>
+<!--                     <a href="https://youtu.be/dIsmOdYHX-s">Watch Part - 2</a> -->
+                 
+                </td>
+                <td></td>
+            </tr>
         </table>
     </div>
 </body>
