--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -378,6 +378,7 @@
                     </ul>
                 </td>
                 <td>-</td>
+                                <span>Completed</span>
                 <td><a href="https://youtu.be/Za0gcq3pwYM">Watch Part - 1</a>
                 <br>
 <!--                     <a href="https://youtu.be/dIsmOdYHX-s">Watch Part - 2</a> -->
