--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -377,8 +377,9 @@
                         </li>
                     </ul>
                 </td>
-                <td>-</td>
-                                <span>Completed</span>
+                <td>-
+                <br> <span>Completed</span></td>
+                                
                 <td><a href="https://youtu.be/Za0gcq3pwYM">Watch Part - 1</a>
                 <br>
 <!--                     <a href="https://youtu.be/dIsmOdYHX-s">Watch Part - 2</a> -->
