--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -367,7 +367,10 @@
 <!--                      <span style= "color: red;">Today's session off,<br> Due to health issue.</span>  -->
                  
                 </td>
-                <td></td>
+                <td>-
+                <br>
+                <span>Completed</span>
+                </td>
             </tr>
 
             <tr>
@@ -378,7 +381,9 @@
                     </ul>
                 </td>
                 <td>-
-                <br> <span>Completed</span></td>
+                <br> 
+<!--                     <span>Completed</span> -->
+                </td>
                                 
                 <td><a href="https://youtu.be/Za0gcq3pwYM">Watch Part - 1</a>
                 <br>
