--- a/syllabuswithlink.html
+++ b/syllabuswithlink.html
@@ -41,6 +41,11 @@
 
         li {
             font-size: small;
+            line-height: 40px;
+        }
+
+        .noneStyle {
+            list-style: none; 
         }
 
         span {
@@ -58,9 +63,10 @@
 <body>
     <div class="responsive">
         <p>30 JULY 2023</p>
-        <h2>SYLLABUS</h1>
-            <h3>FULL STACK WEB DEVELOPMENT
-        </h2>
+        <h2>SYLLABUS</h2>
+            <h3>FULL STACK WEB DEVELOPMENT</h3>
+        <hr>
+        <h2>FRONT-END </h2>
         <hr>
         <h3>HTML</h3>
         <table>
@@ -411,6 +417,272 @@
                 <td></td>
             </tr>
         </table>
+        <table>
+            <h3>JAVA SCRIPT ES6</h3>
+            <tr>
+                <th>TOPIC</th>
+                <th>TIME</th>
+                <th>LINK</th>
+                <th>RECORDED LINK</th>
+            </tr>
+            <tr>
+                <td>SECTION 14 : Introduction to JavaScript ES6
+                    <ul>
+                        <li>Introduction to JavaScript</li>
+                        <li>Javascript Alerts - Adding Behavior to Websites</li>
+                        <li>Data Types</li>
+                        <li>Javascript Variables</li>
+                        <li>Javascript Variables Exercise Start</li>
+                        <li>Javascript Variables Exercise</li>
+                        <li>Javascript Variables Exercise Solution</li>
+                        <li>Naming and Naming Conventions for JavaScript Variables</li>
+                        <li>Javascript Variable Naming Quiz</li>
+                        <li>String Concatenation</li>
+                        <li>String Lengths and Retrieving the Number of Characters</li>
+                        <li>Slicing and Extracting Parts of a String</li>
+                        <li>Challenge: Changing Casing in Text</li>
+                        <li>Challenge: Changing String Casing Solution</li>
+                        <li>Basic Arithmatic and the Modulo Operator in JavaScript</li>
+                        <li>Increment and Decrement Expressions</li>
+                        <li>Javascript Numbers Quiz</li>
+                        <li>Functions Part 1: Creating and Calling Functions</li>
+                        <li>Functions Part 1 Challenge - The Karel Robot</li>
+                        <li>The Karel Chess Board Solution</li>
+                        <li>Functions Part 2: Parameters and Arguments</li>
+                        <li>Life in Weeks Coding Exercise</li>
+                        <li>Life in Weeks Solution</li>
+                        <li>Function Part 3: Outputs & Return Values</li>
+                        <li>Challenge: Create a BMI Calculator</li>
+                        <li>BMI Calculator Challenge</li>
+                        <li>Challenge: BMI Calculator Solution</li>
+                        <li>JavaScript Functions Quiz</li>
+                    </ul>
+                </td>
+                <td>Day 11</td>
+                <td><a href="#">Join</a>
+                    <!-- <br><span>Completed</span> -->
+                </td>
+                <td><a href="#">-</a></td>
+            </tr>
+
+            <tr>
+                <td>
+                    SECTION 15: Intermediate JavaScript
+                    <ul>
+                        <li>Random Number Generation in JavaScript: Building a Love Calculator</li>
+                        <li>Control Statements: Using if-else conditionals & Logic</li>
+                        <li>Comparatos and Eqality</li>
+                        <li>Combining Comparatos</li>
+                        <li>BMI Calculator Advanced (if/else)</li>
+                        <li>Introducing the Leap Year Code Challenge</li>
+                        <li>Leap Year Challenge Exercise</li>
+                        <li>Leap Year Solution</li>
+                        <li>Collections: Working with JavaScript Arrays</li>
+                        <li>Adding Elements and Intermediate Array Techniques</li>
+                        <li>Who's Buying Lunch Solution</li>
+                        <li>Control Statements: While Loops</li>
+                        <li>Solution to the 99 Bottles Challenge</li>
+                        <li>Control Statements: For Loops</li>
+                        <li>Introducing the Fibonacci Code Challenge</li>
+                        <li>The Fibonacci Exercise</li>
+                        <li>Fibonacci Solution</li>
+                    </ul>
+                </td>
+                <td>Day 12</td>
+                <td><a href="#">Join</a>
+                    <!-- <br><Span>Completed</Span> -->
+                </td>
+                <td><a href="#">-</a></td>
+            </tr>
+
+            <tr>
+                <td>
+                    SECTION 16: The Document Object Model (DOM)
+                    <ul>
+                        <li>Adding JavaScript to Website</li>
+                        <li>Introduction to the Document Object Model (DOM)</li>
+                        <li>Solution to the DOM Challenge</li>
+                        <li>Selecting HTML Elements with JavaScript</li>
+                        <li>Manipulating and Changing Styles of HTML Elements with JavaScript</li>
+                        <li>The Seperation of Concerns: Structure vs Style vs Behavior</li>
+                        <li>Text Manipulation and the Text Content Property</li>
+                        <li>Manipulating HTML Element Attribues</li>
+                    </ul>
+                </td>
+                <td>Day 13</td>
+                <td><a href="#">Join</a><br>
+                    <!-- <Span>Completed</Span> -->
+                </td>
+                <td><a href="#">-</a></td>
+            </tr>
+
+            <tr>
+                <td>
+                    SECTION 17: Boss Level Challenge 1 - The Dice Game
+                    <ul>
+                        <li>Challenge: The Dice Challenge</li>
+                        <li>Dicee Challenge Step 0 - Download the Skeleton Project</li>
+                        <li>Dicee Challenge Step 1 - Create an External JavaScript File</li>
+                        <li>Dicee Challenge Step 2 - Add Dice Images</li>
+                        <li>Dicee Challenge Step 3 - Create a Random Number</li>
+                        <li>Dicee Challenge Step 4 - Change the <code><img></code>to a Random Dice</li>
+                        <li>Dicee Challenge Step 5 - Change both <code><img></code>Elements</li>
+                        <li>Dicee Challenge Step 6 - Change the Title to Display a Winner</li>
+                        <li>The Solution to the Dicee Challenge</li>
+                    </ul>
+                </td>
+                <td>Day 14</td>
+                <td><a href="#">Join</a><br>
+                    <!-- <span>Completed</span> -->
+                </td>
+                <td><a href="#">-</a></td>
+            </tr>
+
+            <tr>
+                <td>
+                    SECTION 18: Advanced JavaScript and DOM Manipulation
+                    <ul>
+                        <li>What We'll Make: Drum Kit</li>
+                        <li>Download Starting Files</li>
+                        <li>Adding Event Listeners to a Button</li>
+                        <li>Higer Order Function and Passing Functions as Arguments</li>
+                        <li>Higher Order Function Challenge Solution</li>
+                        <li>How to Play Sounds on a Website</li>
+                        <li>A Deeper Understanding of JavaScript Objects</li>
+                        <li>How to Use Switch Statements in JavaScript</li>
+                        <li>Objects, their Methods and the Dot Notation</li>
+                        <li>Using Keyboard Event Listeners to Check for Key Presses</li>
+                        <li>Understanding Callbacks and How to Respond to Events</li>
+                        <li>Adding Animation to Website</li>
+                    </ul>
+                </td>
+                <td>Day 15</td>
+                <td><a href="#">Join</a><br>
+                <!-- <span>Completed</span> -->
+            </td>
+            <td><a href="#">-</a></td>
+            </tr>
+        </table>
+
+        <table>
+            <h3>jQuery</h3>
+            <tr>
+                <th>TOPIC</th>
+                <th>TIME</th>
+                <th>LINK</th>
+                <th>RECORDED LINK</th>
+            </tr>
+            <tr>
+                <td>
+                    SECTION 19: jQuery
+                    <ul>
+                        <li>What is jQuery?</li>
+                        <li>How to Incorporate jQuery into websites</li>
+                        <li>How Manification Works to Reduce File font-size</li>
+                        <li>Selecting Elements with jQuery</li>
+                        <li>Manipulating Styles with jQuery</li>
+                        <li>Manipulating Text with jQuery</li>
+                        <li>Manipulating Attributes with jQuery</li>
+                        <li>Adding Events Listeners with jQuery</li>
+                        <li>Adding and Removing Elements with jQuery</li>
+                        <li>Website Animations with jQuery</li>
+                    </ul>
+                </td>
+                <td>Day 16</td>
+                <td><a href="#">Join</a><br>
+                <span>Completed</span>
+            </td>
+            </tr>
+        </table>
+
+            <table>
+                <h3>PROJECT</h3>
+            <tr>
+                <th>TOPIC</th>
+                <th>DOWNLOAD</th>
+            </tr>
+            <tr>
+                <td>
+                    SECTION 20: Boss Level Challenge 2 - The Simon Game
+                    <ul>
+                        <li>What You'll Make: The Simon Game</li>
+                        <li>Step 0 - Download the Starting Files</li>
+                        <li>Step 1 - Add JavaScript and jQuery</li>
+                        <li>Step 1 - Answer</li>
+                        <li>Step 2 - Create a New Pattern</li>
+                        <li>Step 2 - Answer</li>
+                        <li>Step 3 - Show the Sequence to the User with Animations and Sounds</li>
+                        <li>Step 3 - Answer</li>
+                        <li>Step 4 - Check Which Button is Pressed</li>
+                        <li>Step 4 - Answer</li>
+                        <li>Step 5 - Add Sounds to Button Clicks</li>
+                        <li>Step 5 - Answer</li>
+                        <li>Step 6 - Add Animations to User Clicks</li>
+                        <li>Step 6 - Answer</li>
+                        <li>Step 7 - Start the Game</li>
+                        <li>Step 7 - Answer</li>
+                        <li>Step 8 - Check the User's Answer Against the Game Sequence8</li>
+                        <li>Step 8 - Answer</li>
+                        <li>Step 9 - Game Over</li>
+                        <li>Step 9 - Answer</li>
+                        <li>Step 10 - Restart the Game</li>
+                        <li>Step 10 - Answer</li>
+                        <li>Download the Completed Project Code</li>
+                    </ul>
+                </td>
+                <td>READ ALL PROJECT PDF
+                    <li class="noneStyle"><a href="#" download="">Download 1</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 2</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 3</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 4</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 5</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 6</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 7</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 8</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 9</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 10</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 11</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 12</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 13</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 14</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 15</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 16</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 17</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 18</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 19</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 20</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 21</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 22</a></li>
+                    <li class="noneStyle"><a href="#" download="">Download 23</a></li>
+                </td>
+            </tr>
+        </table>
+
+        <table>
+            <h3>UNIX COMMAND LINE</h3>
+            <tr>
+                <th>TOPIC</th>
+                <th>TIME</th>
+                <th>LINK</th>
+                <th>RECORDED LINK</th>
+            </tr>
+            <td>
+                SECTION 21: The Unix Command Line
+                <ul>
+                    <li>Install Git Bash on Windows</li>
+                    <li>Understanding the Command Line. Long Live the Command Line!</li>
+                    <li>Command Line Techniques and Directory Navigation</li>
+                    <li>Creating, Opening, and Removing Files through the Command Line</li>
+                </ul>
+            </td>
+            <td>Day 17</td>
+            <td><a href="#">Join</a><br>
+            <!-- <span>Completed</span> -->
+        </td>
+        </table>
+
+        <hr>
+        <h2>BACK-END </h2>
     </div>
 </body>
 
